Added Intro block

--- a/src/blocks/modules/intro/intro.html
+++ b/src/blocks/modules/intro/intro.html
@@ -1,2 +1,22 @@
-<div class="intro"></div>
+<div class="intro">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3 offset-lg-5">
+                <div class="title-1 color-blue">«Дантист» — моя стоматология в Кирове</div>
+                <p>
+                    Представьте, что все страхи и мучения остались позади.
+                    Ужасной зубной боли больше нет. Вы полны
+                    уверенности, красиво улыбаетесь, изо рта - приятный
+                    запах. Теперь снова можете жевать без мучений.
+                </p>
+                <div class="intro__title">И наконец-то выспаться!</div>
+                <p>
+                    Трудно поверить, но всего 1 час назад зуб невыносимо
+                    ныл, а прошлую ночь Вы почти не спали...
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- /.container-fluid -->
+</div>
 <!-- /.intro -->
