Added Home-1 block

--- a/src/blocks/modules/menu/menu.html
+++ b/src/blocks/modules/menu/menu.html
@@ -7,11 +7,11 @@
     <div class="menu__accordion accordion" id="accordionMenu">
         <div class="card">
             <div class="card-header" id="accordionLink-1">
-                <div class="accordion__link" data-toggle="collapse" data-target="#collapseMenu-1"
+                <button class="accordion__link" data-toggle="collapse" data-target="#collapseMenu-1"
                         aria-expanded="true" aria-controls="collapseMenu-1">
                     Терапевтическая стоматология
                     <span class="accordion__arrow"></span>
-                </div>
+                </button>
             </div>
 
             <div id="collapseMenu-1" class="collapse show" aria-labelledby="accordionLink-1" data-parent="#accordionMenu">
@@ -38,11 +38,11 @@
         </div>
         <div class="card">
             <div class="card-header" id="accordionLink-2">
-                <div class="accordion__link collapsed" data-toggle="collapse" data-target="#collapseMenu-2"
+                <button class="accordion__link collapsed" data-toggle="collapse" data-target="#collapseMenu-2"
                         aria-expanded="false" aria-controls="collapseMenu-2">
                     Хирургическая стоматология
                     <span class="accordion__arrow"></span>
-                </div>
+                </button>
             </div>
             <div id="collapseMenu-2" class="collapse" aria-labelledby="accordionLink-2" data-parent="#accordionMenu">
                 <div class="card-body">
@@ -68,11 +68,11 @@
         </div>
         <div class="card">
             <div class="card-header" id="accordionLink-3">
-                <div class="accordion__link collapsed" data-toggle="collapse" data-target="#collapseMenu-3"
+                <button class="accordion__link collapsed" data-toggle="collapse" data-target="#collapseMenu-3"
                      aria-expanded="false" aria-controls="collapseMenu-3">
                     Ортопедическая стоматология
                     <span class="accordion__arrow"></span>
-                </div>
+                </button>
             </div>
             <div id="collapseMenu-3" class="collapse" aria-labelledby="accordionLink-3" data-parent="#accordionMenu">
                 <div class="card-body">
@@ -98,11 +98,11 @@
         </div>
         <div class="card">
             <div class="card-header" id="accordionLink-4">
-                <div class="accordion__link collapsed" data-toggle="collapse" data-target="#collapseMenu-4"
+                <button class="accordion__link collapsed" data-toggle="collapse" data-target="#collapseMenu-4"
                      aria-expanded="false" aria-controls="collapseMenu-4">
                     Отбеливание зубов
                     <span class="accordion__arrow"></span>
-                </div>
+                </button>
             </div>
             <div id="collapseMenu-4" class="collapse" aria-labelledby="accordionLink-4" data-parent="#accordionMenu">
                 <div class="card-body">
@@ -128,11 +128,11 @@
         </div>
         <div class="card">
             <div class="card-header" id="accordionLink-5">
-                <div class="accordion__link collapsed" data-toggle="collapse" data-target="#collapseMenu-5"
+                <button class="accordion__link collapsed" data-toggle="collapse" data-target="#collapseMenu-5"
                      aria-expanded="false" aria-controls="collapseMenu-5">
                     Изготовление капп
                     <span class="accordion__arrow"></span>
-                </div>
+                </button>
             </div>
             <div id="collapseMenu-5" class="collapse" aria-labelledby="accordionLink-5" data-parent="#accordionMenu">
                 <div class="card-body">
