--- a/src/blocks/modules/intro/intro.html
+++ b/src/blocks/modules/intro/intro.html
@@ -1,7 +1,7 @@
 <div class="intro">
-    <div class="container-fluid">
+    <div class="container-small">
         <div class="row">
-            <div class="col-lg-3 offset-lg-5">
+            <div class="col-lg-6 offset-lg-4">
                 <div class="title-1 color-blue">«Дантист» — моя стоматология в Кирове</div>
                 <p>
                     Представьте, что все страхи и мучения остались позади.
@@ -17,6 +17,6 @@
             </div>
         </div>
     </div>
-    <!-- /.container-fluid -->
+    <!-- /.container-small -->
 </div>
 <!-- /.intro -->
