Menu fixed bugs

--- a/src/blocks/modules/menu/menu.html
+++ b/src/blocks/modules/menu/menu.html
@@ -1,7 +1,11 @@
 <div class="menu">
 
     <div class="menu__logo">
-        <img src="../../../img/icons/logo.jpg" alt="">
+        <picture>
+            <source type="image/webp" srcset="../../../img/icons/logo.webp">
+            <source type="image/jpeg" srcset="../../../img/icons/logo.jpg">
+            <img src="../../../img/icons/logo.jpg" alt="">
+        </picture>
     </div>
 
     <div class="menu__accordion accordion" id="accordionMenu">
