--- a/src/blocks/modules/home-2/home-2.html
+++ b/src/blocks/modules/home-2/home-2.html
@@ -13,7 +13,7 @@
                 </p>
             </div>
             <div class="col-lg-6 mb-lg-5">
-                <div class="desc">
+                <div class="title-5">
                     Мы предлагаем Вам сделать 2 простых шага на пути к здоровой улыбке.
                 </div>
             </div>
@@ -43,7 +43,7 @@
                 </p>
             </div>
             <div class="col-12">
-                <div class="desc">
+                <div class="title-5">
                     Дальше все просто — запись к специалисту и долгожданное избавление от зубных проблем.
                 </div>
             </div>
