Added Home-7 block

--- a/src/blocks/modules/team/team.html
+++ b/src/blocks/modules/team/team.html
@@ -28,7 +28,7 @@
                                 <div class="col-12 mb-4">
                                     <label class="form-label" for="teamAppointmentPhone">Телефон:</label>
                                     <input type="tel" class="form-control" id="teamAppointmentPhone"
-                                           placeholder="Телефон:" required>
+                                           placeholder="+7 (___) ___-____" required>
                                 </div>
                                 <div class="col-12 mb-4">
                                     <div class="form-label form-appointment-label">Удобное время посещения</div>
