--- a/src/blocks/modules/home-7/home-7.html
+++ b/src/blocks/modules/home-7/home-7.html
@@ -8,13 +8,13 @@
                 <form class="needs-validation" novalidate>
                     <div class="row">
                         <div class="col-lg-4 mb-4">
-                            <label class="form-label" for="teamAppointmentName">Введите Ваше имя:</label>
-                            <input type="text" class="form-control" id="teamAppointmentName"
+                            <label class="form-label" for="home7Name">Введите Ваше имя:</label>
+                            <input type="text" class="form-control" id="home7Name"
                                    placeholder="Василий Петров" required>
                         </div>
                         <div class="col-lg-4 mb-4">
-                            <label class="form-label" for="teamAppointmentPhone">Телефон:</label>
-                            <input type="tel" class="form-control" id="teamAppointmentPhone"
+                            <label class="form-label" for="home7Phone">Телефон:</label>
+                            <input type="tel" class="form-control" id="home7Phone"
                                    placeholder="+7 (___) ___-____" required>
                         </div>
                     </div>
