Changed Home Page id checkbox accept

--- a/src/blocks/modules/home-7/home-7.html
+++ b/src/blocks/modules/home-7/home-7.html
@@ -21,9 +21,9 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="custom-control custom-checkbox mb-4">
-                                <input type="checkbox" class="custom-control-input" id="customControlValidation1"
+                                <input type="checkbox" class="custom-control-input" id="home7Accept"
                                        required>
-                                <label class="custom-control-label" for="customControlValidation1">
+                                <label class="custom-control-label" for="home7Accept">
                                     Согласен на обработку персональных данных и с политикой конфиденциальности
                                 </label>
                                 <div class="invalid-feedback">You must agree before submitting.</div>
