--- a/src/blocks/modules/team/team.html
+++ b/src/blocks/modules/team/team.html
@@ -53,9 +53,9 @@
                             </div>
                             <div class="form-group">
                                 <div class="custom-control custom-checkbox mb-4">
-                                    <input type="checkbox" class="custom-control-input" id="customControlValidation1"
+                                    <input type="checkbox" class="custom-control-input" id="teamAppointmentAccept"
                                            required>
-                                    <label class="custom-control-label" for="customControlValidation1">
+                                    <label class="custom-control-label" for="teamAppointmentAccept">
                                         Согласен на обработку персональных данных и с политикой конфиденциальности
                                     </label>
                                     <div class="invalid-feedback">You must agree before submitting.</div>
