Footer added accordion

--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -62,7 +62,39 @@
                 <div class="title-5 color-white">О компании</div>
                 <ul class="footer__list">
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Наши работы</a>
+                        <div class="footer__accordion accordion" id="footerAccordion-1">
+                            <div class="card">
+                                <div class="card-header" id="footerAccordionLink-1">
+                                    <button class="accordion__link color-white collapsed" data-toggle="collapse" data-target="#collapseFooter-1"
+                                            aria-expanded="false" aria-controls="collapseFooter-1">
+                                        Наши работы
+                                        <span class="accordion__arrow"></span>
+                                    </button>
+                                </div>
+
+                                <div id="collapseFooter-1" class="collapse" aria-labelledby="footerAccordionLink-1" data-parent="#footerAccordion-1">
+                                    <div class="card-body">
+                                        <ul class="footer__accordion_list">
+                                            <li class="footer__accordion_list_item">
+                                                <a href="#" class="footer__list_item_link color-white">Наши работы</a>
+                                            </li>
+                                            <li class="footer__accordion_list_item">
+                                                <a href="#" class="footer__list_item_link color-white">Наши работы</a>
+                                            </li>
+                                            <li class="footer__accordion_list_item">
+                                                <a href="#" class="footer__list_item_link color-white">Наши работы</a>
+                                            </li>
+                                            <li class="footer__accordion_list_item">
+                                                <a href="#" class="footer__list_item_link color-white">Наши работы</a>
+                                            </li>
+                                            <li class="footer__accordion_list_item">
+                                                <a href="#" class="footer__list_item_link color-white">Наши работы</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </li>
                     <li class="footer__list_item">
                         <a href="#" class="footer__list_item_link color-white">Отзывы</a>
@@ -82,7 +114,39 @@
                 <div class="title-5 color-white">Цены</div>
                 <ul class="footer__list">
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Направления</a>
+                        <div class="footer__accordion accordion" id="footerAccordion-2">
+                            <div class="card">
+                                <div class="card-header" id="footerAccordionLink-2">
+                                    <button class="accordion__link color-white collapsed" data-toggle="collapse" data-target="#collapseFooter-2"
+                                            aria-expanded="false" aria-controls="collapseFooter-2">
+                                        Направления
+                                        <span class="accordion__arrow"></span>
+                                    </button>
+                                </div>
+
+                                <div id="collapseFooter-2" class="collapse" aria-labelledby="footerAccordionLink-2" data-parent="#footerAccordion-2">
+                                    <div class="card-body">
+                                        <ul class="footer__accordion_list">
+                                            <li class="footer__accordion_list_item">
+                                                <a href="#" class="footer__list_item_link color-white">Направления</a>
+                                            </li>
+                                            <li class="footer__accordion_list_item">
+                                                <a href="#" class="footer__list_item_link color-white">Направления</a>
+                                            </li>
+                                            <li class="footer__accordion_list_item">
+                                                <a href="#" class="footer__list_item_link color-white">Направления</a>
+                                            </li>
+                                            <li class="footer__accordion_list_item">
+                                                <a href="#" class="footer__list_item_link color-white">Направления</a>
+                                            </li>
+                                            <li class="footer__accordion_list_item">
+                                                <a href="#" class="footer__list_item_link color-white">Направления</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </li>
                     <li class="footer__list_item">
                         <a href="#" class="footer__list_item_link color-white">Лечение в кредит</a>
@@ -93,23 +157,31 @@
                 <div class="title-5 color-white">Контакты</div>
                 <ul class="footer__list">
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">
+                        <div class="footer__list_item_info color-white">
+                            <img class="footer__list_item_info_icon" src="../../../img/svg/pin.svg" alt="">
                             610021, г. Киров <br>
                             ул. М. Конева, 7, корпус 5
-                        </a>
+                        </div>
                     </li>
                     <li class="footer__list_item">
-                        <a href="tel:88332711404" class="footer__list_item_link color-white">8 (8332) 711-404</a>
+                        <div class="footer__list_item_info color-white">
+                            <img class="footer__list_item_info_icon" src="../../../img/svg/call.svg" alt="">
+                            8 (8332) 711-404
+                        </div>
                     </li>
                     <li class="footer__list_item">
-                        <a href="mailto:dentist43@gmail.com." class="footer__list_item_link color-white">dentist43@gmail.com.</a>
+                        <div class="footer__list_item_info color-white">
+                            <img class="footer__list_item_info_icon" src="../../../img/svg/mail.svg" alt="">
+                            dentist43@gmail.com
+                        </div>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">
+                        <div class="footer__list_item_info color-white">
+                            <img class="footer__list_item_info_icon" src="../../../img/svg/clock.svg" alt="">
                             пн-пт: 9:00-20:00 <br>
                             сб: 9:00-14:00 <br>
                             вс — выходной
-                        </a>
+                        </div>
                     </li>
                 </ul>
             </div>
