Footer: added mobile version

--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -35,7 +35,7 @@
         </ul>
         <!-- /.header__address -->
 
-        <a href="#" class="btn-1 btn-red">Записаться на прием</a>
+        <a href="#" class="header__btn btn-1 btn-red">Записаться на прием</a>
     </div>
     <!-- /.header__box -->
 
