--- a/src/blocks/modules/home-3/home-3.html
+++ b/src/blocks/modules/home-3/home-3.html
@@ -4,7 +4,7 @@
 
     <div class="container-small">
 
-        <div class="title-1 cards__title color-white">И почему я не пошел лечить зубы раньше?</div>
+        <div class="title-1 cards__title color-white">ШАГ 2: Найдите СВОЕГО врача</div>
 
         <div class="cards__desc color-white">
             В стоматологической клинике «Дантист» Вы найдете настоящих специалистов по направлениям:
