--- a/src/blocks/modules/menu/menu.html
+++ b/src/blocks/modules/menu/menu.html
@@ -11,14 +11,14 @@
     <div class="menu__accordion accordion" id="accordionMenu">
         <div class="card">
             <div class="card-header" id="accordionLink-1">
-                <button class="accordion__link" data-toggle="collapse" data-target="#collapseMenu-1"
-                        aria-expanded="true" aria-controls="collapseMenu-1">
+                <button class="accordion__link collapsed" data-toggle="collapse" data-target="#collapseMenu-1"
+                        aria-expanded="false" aria-controls="collapseMenu-1">
                     Терапевтическая стоматология
                     <span class="accordion__arrow"></span>
                 </button>
             </div>
 
-            <div id="collapseMenu-1" class="collapse show" aria-labelledby="accordionLink-1" data-parent="#accordionMenu">
+            <div id="collapseMenu-1" class="collapse" aria-labelledby="accordionLink-1" data-parent="#accordionMenu">
                 <div class="card-body">
                     <ul class="menu__accordion_list">
                         <li class="menu__accordion_list_item">
