--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -3,7 +3,7 @@
         
         <div class="row">
 
-            <div class="col-lg">
+            <div class="col-xl">
                 <div class="title-5 color-white">Услуги</div>
                 <ul class="footer__list">
                     <li class="footer__list_item">
@@ -32,7 +32,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg">
+            <div class="col-xl">
                 <div class="title-5 color-white">Наши специалисты</div>
                 <ul class="footer__list">
                     <li class="footer__list_item">
@@ -58,7 +58,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg">
+            <div class="col-xl">
                 <div class="title-5 color-white">О компании</div>
                 <ul class="footer__list">
                     <li class="footer__list_item">
@@ -110,7 +110,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg">
+            <div class="col-xl">
                 <div class="title-5 color-white">Цены</div>
                 <ul class="footer__list">
                     <li class="footer__list_item">
@@ -153,7 +153,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg">
+            <div class="col-xl">
                 <div class="title-5 color-white">Контакты</div>
                 <ul class="footer__list">
                     <li class="footer__list_item">
@@ -185,16 +185,16 @@
                     </li>
                 </ul>
             </div>
-            
+
         </div>
         <!-- /.row -->
 
         <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <ul class="footer__bottom_list col-lg">
+            <div class="col-xl"></div>
+            <div class="col-xl"></div>
+            <div class="col-xl"></div>
+            <div class="col-xl"></div>
+            <ul class="footer__bottom_list col-xl">
                 <li class="footer__bottom_list_item">
                     <a href="#" class="btn-3 btn-dark">
                         <img src="../../../img/svg/vk.svg" alt="">
