Intro: added mobile version

--- a/src/blocks/modules/intro/intro.html
+++ b/src/blocks/modules/intro/intro.html
@@ -1,4 +1,10 @@
 <div class="intro">
+    <div class="intro__tablet">
+        <img src="../../../img/home/intro/intro-bg.png" alt="">
+    </div>
+    <div class="intro__mobile">
+        <img src="../../../img/home/intro/intro-mobile.jpg" alt="">
+    </div>
     <div class="container-small">
         <div class="row">
             <div class="col-lg-6 offset-lg-4">
