Home: added mobile version

--- a/src/blocks/modules/home-1/home-1.html
+++ b/src/blocks/modules/home-1/home-1.html
@@ -6,7 +6,7 @@
 
         <div class="title-1 cards__title color-white">И почему я не пошел лечить зубы раньше?</div>
 
-        <div class="row">
+        <div class="row cards__slider">
 
             <div class="col-lg-4">
 
