--- a/src/blocks/modules/home-2/home-2.html
+++ b/src/blocks/modules/home-2/home-2.html
@@ -20,7 +20,7 @@
             <div class="col-12">
                 <div class="title-2 color-red">Шаг 1: Приходите на консультацию</div>
             </div>
-            <div class="col-lg-6 mb-lg-5">
+            <div class="col-12 mb-lg-5 column-2">
                 <p>
                     Вы просто поговорите со специалистом. Врач проводит осмотр, составляет план лечения и примерную
                     стоимость. Всё, неизвестность в прошлом.
@@ -29,10 +29,6 @@
                     Далее Вы узнаёте, как избавиться от боли. Какие современные обезболивающие препараты мы используем.
                     Узнаёте, что действие обезболивающих снижается, если перед визитом Вы употребляли алкоголь,
                     переволновались, не отдохнули или не выспались. Откроем секрет, на самом деле, докторам
-                </p>
-            </div>
-            <div class="col-lg-6 mb-lg-5">
-                <p>
                     стоматологической клиники «Дантист» очень удобно работать, когда Вам совсем не больно, когда Вы
                     спокойны и расслаблены в кресле. Стыдитесь, что запустили зубы? Откроем еще одну тайну: стоматологам
                     интереснее именно запущенные зубы. Тут есть, где применить свои профессиональные знания и
@@ -42,6 +38,7 @@
                     После приема Вы чувствуете уверенность и понимаете, что это Ваш доктор.
                 </p>
             </div>
+            <div class="col-12"></div>
             <div class="col-12">
                 <div class="title-5">
                     Дальше все просто — запись к специалисту и долгожданное избавление от зубных проблем.
