--- a/src/blocks/modules/home-3/home-3.html
+++ b/src/blocks/modules/home-3/home-3.html
@@ -10,7 +10,7 @@
             В стоматологической клинике «Дантист» Вы найдете настоящих специалистов по направлениям:
         </div>
 
-        <div class="row">
+        <div class="row cards__slider">
 
             <div class="col-lg-4">
 
