--- a/src/blocks/modules/home-4/home-4.html
+++ b/src/blocks/modules/home-4/home-4.html
@@ -16,13 +16,16 @@
             </div>
 
             <div class="col-lg-6">
-                <div class="link-block">
+                <div class="link-block link-desktop">
                     <a href="#" class="link link-red color-red">Смотреть полный прайс-лист</a>
                 </div>
                 <p>
                     Что будет если не лечить? Если вовремя не принять меры, то может быть очень больно, дорого и даже
                     опасно для жизни!
                 </p>
+                <div class="link-block link-mobile">
+                    <a href="#" class="link link-red color-red">Смотреть полный прайс-лист</a>
+                </div>
                 <div class="title-5">
                     Поэтому, чем чаще Вы посещаете стоматолога, тем ДЕШЕВЛЕ обходится здоровье зубов.
                 </div>
