--- a/src/blocks/modules/home-7/home-7.html
+++ b/src/blocks/modules/home-7/home-7.html
@@ -7,19 +7,19 @@
 
                 <form class="needs-validation" novalidate>
                     <div class="row">
-                        <div class="col-lg-4 mb-4">
+                        <div class="col-md-6 col-xl-4 mb-4">
                             <label class="form-label" for="home7Name">Введите Ваше имя:</label>
                             <input type="text" class="form-control" id="home7Name"
                                    placeholder="Василий Петров" required>
                         </div>
-                        <div class="col-lg-4 mb-4">
+                        <div class="col-md-6 col-xl-4 mb-4">
                             <label class="form-label" for="home7Phone">Телефон:</label>
                             <input type="tel" class="form-control" id="home7Phone"
                                    placeholder="+7 (___) ___-____" required>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-4">
+                        <div class="col-md-6 col-xl-4">
                             <div class="custom-control custom-checkbox mb-4">
                                 <input type="checkbox" class="custom-control-input" id="home7Accept"
                                        required>
@@ -29,7 +29,7 @@
                                 <div class="invalid-feedback">You must agree before submitting.</div>
                             </div>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-md-6 col-xl-4">
                             <div class="form-btn">
                                 <button class="btn-2 btn-red" type="submit">Отправить</button>
                             </div>
