--- a/src/blocks/modules/team/team.html
+++ b/src/blocks/modules/team/team.html
@@ -7,12 +7,12 @@
         <div class="team__slider">
             <div class="teem__slider_item">
                 <div class="row">
-                    <div class="col-lg-7 mb-lg-5">
+                    <div class="col-lg-7 mb-3 mb-lg-5 order-1 order-lg-1">
                         <div class="team__slider_img">
                             <img src="../../../img/home/team/team-ava.jpg" alt="Антон Игоревич Ворончихин">
                         </div>
                     </div>
-                    <div class="col-lg-5 mb-lg-5">
+                    <div class="col-lg-5 mb-lg-5 order-4 order-lg-2">
                         <div class="team__slider_appointment">
                             <div class="team__slider_appointment_title title-1 color-blue">
                                 Записаться на прием
@@ -68,7 +68,7 @@
 
                         </div>
                     </div>
-                    <div class="col-lg-7">
+                    <div class="col-md-6 col-lg-7 mb-3 mb-lg-0 order-2 order-lg-3">
                         <div class="team__slider_info">
                             <div class="team__slider_info_name title-2">Антон Игоревич <br> Ворончихин</div>
                             <div class="team__slider_info_position">Директор</div>
@@ -91,7 +91,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-md-6 col-lg-5 mb-3 mb-lg-0 order-3 order-lg-4">
                         <div class="team__slider_reviews">
                             <div class="team__slider_reviews_head bg-blue">
                                 <div class="arrow-1 arrow-1__prev team__slider_reviews_arrow_prev-1"></div>
@@ -140,12 +140,12 @@
             </div>
             <div class="teem__slider_item">
                 <div class="row">
-                    <div class="col-lg-7 mb-lg-5">
+                    <div class="col-lg-7 mb-3 mb-lg-5 order-1 order-lg-1">
                         <div class="team__slider_img">
                             <img src="../../../img/home/team/team-ava.jpg" alt="Антон Игоревич Ворончихин">
                         </div>
                     </div>
-                    <div class="col-lg-5 mb-lg-5">
+                    <div class="col-lg-5 mb-lg-5 order-4 order-lg-2">
                         <div class="team__slider_appointment">
                             <div class="team__slider_appointment_title title-1 color-blue">
                                 Записаться на прием
@@ -201,7 +201,7 @@
 
                         </div>
                     </div>
-                    <div class="col-lg-7">
+                    <div class="col-md-6 col-lg-7 mb-3 mb-lg-0 order-2 order-lg-3">
                         <div class="team__slider_info">
                             <div class="team__slider_info_name title-2">Антон Игоревич <br> Ворончихин</div>
                             <div class="team__slider_info_position">Директор</div>
@@ -224,7 +224,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-md-6 col-lg-5 mb-3 mb-lg-0 order-3 order-lg-4">
                         <div class="team__slider_reviews">
                             <div class="team__slider_reviews_head bg-blue">
                                 <div class="arrow-1 arrow-1__prev team__slider_reviews_arrow_prev-2"></div>
@@ -273,6 +273,10 @@
             </div>
         </div>
         <!-- /.team__slider -->
+        
+        <div class="team__all">
+            <a href="#" class="link link-blue color-blue">Cмотреть всех сотрудников</a>
+        </div>
 
     </div>
     <!-- /.container-small -->
