--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -1,53 +1,7 @@
 <header class="header">
     <div class="container-fluid">
 
-        <div class="header__box">
-            
-            <div class="header__logo">
-                <img src="../../../img/icons/logo.jpg" alt="">
-            </div>
-
-            <ul class="header__navigation">
-                <li class="header__navigation_item">
-                    <a href="#" class="header__navigation_item_link">Услуги</a>
-                </li>
-                <li class="header__navigation_item">
-                    <a href="#" class="header__navigation_item_link">Врачи</a>
-                </li>
-                <li class="header__navigation_item">
-                    <a href="#" class="header__navigation_item_link">Цены</a>
-                </li>
-                <li class="header__navigation_item">
-                    <a href="#" class="header__navigation_item_link">О Клинике</a>
-                </li>
-                <li class="header__navigation_item">
-                    <a href="#" class="header__navigation_item_link">Контакты</a>
-                </li>
-                <li class="header__navigation_item">
-                    <a href="#" class="header__navigation_item_link">Вопрос-ответ</a>
-                </li>
-                <li class="header__navigation_item">
-                    <div class="header__number">
-                        <span class="header__number_badge">8332</span>
-                        711-404
-                    </div>
-                </li>
-            </ul>
-            <!-- /.header__navigation -->
-
-            <ul class="header__address">
-                <li class="header__address_text">ул. М. Конева, 7, корпус 5</li>
-                <li class="header__address_text">пн-пт 8.00 - 20.00 | сб 9.00 - 14.00</li>
-            </ul>
-            <!-- /.header__address -->
-
-            <div class="box">
-                <a href="#" class="header__btn btn-1 btn-red">Записаться <span>&nbsp; на прием</span></a>
-                @@include("../hamburger/hamburger.html")
-            </div>
-
-        </div>
-        <!-- /.header__box -->
+        @@include("./header-box.html")
 
         <ul class="breadcrumbs">
             <li class="breadcrumbs__item">
@@ -64,8 +18,6 @@
             </li>
         </ul>
         <!-- /.breadcrumbs -->
-
-        @@include("../menu-mobile/menu-mobile.html")
 
     </div>
     <!-- /.container-fluid -->
