--- a/src/blocks/modules/menu/menu.html
+++ b/src/blocks/modules/menu/menu.html
@@ -1,4 +1,4 @@
-<div class="menu">
+<li class="menu">
 
     <div class="menu__logo">
         <picture>
@@ -162,5 +162,5 @@
         </div>
     </div>
 
-</div>
+</li>
 <!-- /.menu -->
